# ffmpeg

helloffmpeg/ffmpeg-compile-shared-library-for-android/: README.md
helloffmpeg/ffmpeg-compile-shared-library-for-android/ffmpeg/: build_android_arm.sh  config.fate  config.h  configure
推流器/: README.md
推流器/simplest_ffmpeg_android_streamer/Ffmpeg/app/: CMakeLists.txt  build.gradle
推流器/simplest_ffmpeg_android_streamer/Ffmpeg/app/src/main/: AndroidManifest.xml
推流器/simplest_ffmpeg_android_streamer/Ffmpeg/app/src/main/cpp/: native-lib.cpp
推流器/simplest_ffmpeg_android_streamer/Ffmpeg/app/src/main/java/com/fire/ffmpeg/: ClientApplication.java  MainActivity.java
推流器/simplest_ffmpeg_android_streamer/Ffmpeg/app/src/main/java/com/fire/ffmpeg/utils/: FileUtils.java  MD5Utils.java  SDCardUtils.java
推流器/simplest_ffmpeg_android_streamer/Ffmpeg/app/src/main/res/layout/: activity_main.xml
推流器/simplest_ffmpeg_android_streamer/Ffmpeg/app/src/main/res/values/: strings.xml
推流器/simplest_ffmpeg_android_streamer/Ffmpeg/gradle/wrapper/: gradle-wrapper.properties
